Removed css class from button. Alignment issue caused by the auto-stretcher or something.

--- a/src/styles/components/_containers.scss
+++ b/src/styles/components/_containers.scss
@@ -18,9 +18,9 @@
 
 .right {
   display: inline-block;
-  width: 95%;
+  width: 10%;
   margin-left: auto;
-  margin-right: 0;
+  margin-right: 1rem;
 }
 
 .flow {
@@ -28,14 +28,14 @@
 }
 
 .container {
-  display: inline-flex;   // This is the problem, stretches the element to the right of the page?
-  margin: 1rem;
-  margin-top: 0rem;
-  padding: 1rem;
+  display: inline-flex;
+  // margin: 1rem;
+  // margin-top: 0rem;
+  // padding: 1rem;
   border: solid 2px $foreground;
   background: $background;
   color: black;
-  @include status('border', 2px);
+  // @include status('border', 2px);
 
   &.hover {
     &:hover {
